--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-table": "^8.9.3",
     "@typeform/embed-react": "^3.10.0",
     "@vercel/analytics": "^1.0.1",
+    "@vercel/speed-insights": "^1.0.3",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
