--- a/package.json
+++ b/package.json
@@ -2,13 +2,18 @@
   "name": "landing-page",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "pretty:check": "prettier --check ./",
+    "pretty:fix": "prettier --write ./",
+    "format": "yarn pretty:fix"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
@@ -51,6 +56,7 @@
     "@types/node": "^20.11.0",
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
+    "prettier": "^3.2.4",
     "typescript": "^5.3.3"
   }
 }
