--- a/package.json
+++ b/package.json
@@ -28,8 +28,6 @@
     "contentlayer": "^0.3.4",
     "core-js": "^3.33.0",
     "date-fns": "^2.30.0",
-    "eslint": "8.46.0",
-    "eslint-config-next": "13.4.12",
     "lucide-react": "^0.263.1",
     "mobx": "^6.10.2",
     "next": "13.5.1",
@@ -48,13 +46,14 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
-    "typescript": "5.1.6",
     "zod": "^3.22.3"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^14.1.0",
     "prettier": "^3.2.4",
     "typescript": "^5.3.3"
   }
