--- a/package.json
+++ b/package.json
@@ -18,35 +18,35 @@
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.6.0",
-    "@tanstack/react-table": "^8.9.3",
-    "@typeform/embed-react": "^3.10.0",
-    "@vercel/analytics": "^1.0.1",
-    "@vercel/speed-insights": "^1.0.3",
+    "@tanstack/react-table": "^8.12.0",
+    "@typeform/embed-react": "^3.11.0",
+    "@vercel/analytics": "^1.2.0",
+    "@vercel/speed-insights": "^1.0.10",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "contentlayer": "^0.3.4",
     "core-js": "^3.33.0",
-    "date-fns": "^2.30.0",
+    "date-fns": "^3.3.1",
     "lucide-react": "^0.263.1",
-    "mobx": "^6.10.2",
-    "next": "13.5.1",
+    "mobx": "^6.12.0",
+    "next": "^14.1.0",
     "next-contentlayer": "^0.3.4",
     "next-themes": "^0.2.1",
     "postcss": "8.4.31",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
-    "redoc": "^2.1.2",
+    "redoc": "^2.1.3",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-pretty-code": "^0.10.0",
     "rehype-slug": "^5.1.0",
     "remark-gfm": "^3.0.1",
-    "shiki": "^0.14.3",
-    "styled-components": "^6.0.8",
+    "shiki": "^1.1.3",
+    "styled-components": "^6.1.8",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss": "3.3.3",
-    "tailwindcss-animate": "^1.0.6",
-    "zod": "^3.22.3"
+    "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
